[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path="src/main.rs"
name="zero2prod"

[dependencies]
actix-web = "*"
tokio = {version = "*", features = ["macros", "rt-multi-thread"]}
serde ={ version = "*", features = ["derive"]}

[dev-dependencies]
reqwest = "*"