[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path="src/main.rs"
name="zero2prod"

[dependencies]
actix-web = "*"
tokio = {version = "*", features = ["macros", "rt-multi-thread"]}
serde ={ version = "*", features = ["derive"]}
config = "*"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"

[dev-dependencies]
reqwest = "*"

[dependencies.sqlx]
    version = "0.5.7"
    default-features = false
    features = [
        "runtime-actix-rustls", # tells sqlx to use the actix runtime for its futures and rustls as TLS backend
        "macros",# gives us access to sqlx::query! and sqlx::query_as!, which we will be using extensively
        "postgres",# unlocks Postgres-specific functionality (e.g. non-standard SQL types)
        "uuid",# adds support for mapping SQL UUIDs to the Uuid type from the uuid crate
        "chrono",# adds support for mapping SQL timestamptz to the DateTime<T> type from the chrono crate
        "migrate"# gives us access to the same functions used under the hood by sqlx-cli to manage migrations
    ]